--- a/config.toml
+++ b/config.toml
@@ -16,8 +16,8 @@ pygmentscodefences = true
 ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_cache$", "\\.knit\\.md$", "\\.utf8\\.md$"]
 
 [params]
-  sitename = "Hugo Tanka Theme"
-  faviconfile = "images/favicon.png"
+  sitename = "Time Machine For Peace!"
+  faviconfile = "images/UPC.png"
   highlightjs = true
   highlightjslanguages = ["r", "python", "stan"]
   uselatex = true
@@ -31,7 +31,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_cache$", "\\.knit\\.md$", "\\.utf8\
 
 [[menu.primary]]
     name = "Home"
-    url = "/"
+    url = "https://timemachineforpeace.wp.computer/"
     weight = 1
 [[menu.primary]]
     name = "About"
@@ -39,13 +39,6 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_cache$", "\\.knit\\.md$", "\\.utf8\
     weight = 2
 [[menu.primary]]
     name = "GitHub"
-    url = "https://github.com/nanxstats"
+    url = "https://github.com/wp-computer/timemachineforpeace.git"
     weight = 3
-[[menu.primary]]
-    name = "Twitter"
-    url = "https://twitter.com/nanxstats"
-    weight = 4
-[[menu.primary]]
-    name = "Subscribe"
-    url = "/index.xml"
-    weight = 5
+
