--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseurl = "https://timemachineforpeace.wp.computer/"
-title = "Time Machine For Peace!"
+title = "Time Machine For Peace."
 author = "Blair Munro"
 canonifyurls = true
 languagecode = "en"
@@ -16,7 +16,7 @@ pygmentscodefences = true
 ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_cache$", "\\.knit\\.md$", "\\.utf8\\.md$"]
 
 [params]
-  sitename = "Time Machine For Peace!"
+  sitename = "Time Machine For Peace."
   faviconfile = "images/UPC.png"
   highlightjs = true
   highlightjslanguages = ["r", "python", "stan"]
@@ -34,11 +34,11 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_cache$", "\\.knit\\.md$", "\\.utf8\
     url = "https://timemachineforpeace.wp.computer/"
     weight = 1
 [[menu.primary]]
+    name = "Dedication"
+    url = "/dedication/"
+    weight = 3
+[[menu.primary]]
     name = "About"
     url = "/about/"
     weight = 2
-[[menu.primary]]
-    name = "GitHub"
-    url = "https://github.com/wp-computer/timemachineforpeace.git"
-    weight = 3
 
