--- a/config.toml
+++ b/config.toml
@@ -30,19 +30,32 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_cache$", "\\.knit\\.md$", "\\.utf8\
       unsafe = true
 
 [[menu.primary]]
-    name = "Home"
-    url = "https://timemachineforpeace.wp.computer/"
+    name = "IN"
+    url = "/IN/"
     weight = 1
 [[menu.primary]]
     name = "Dedication"
     url = "/dedication/"
-    weight = 3
+    weight = 2
 [[menu.primary]]
     name = "About"
     url = "/about/"
-    weight = 2
+    weight = 3
+[[menu.primary]]
+    name = "FAQ"
+    url = "/faq/"
+    weight = 4
+[[menu.primary]]
+    name = "Booth"
+    url = "/booth/"
+    weight = 5
 [[menu.primary]]
     name = "Kickstarter"
     url = "/kickstarter/"
-    weight = 4
+    weight = 6
+[[menu.primary]]
+    name = "Logs"
+    url = "/logs/"
+    weight = 7
+
 
