--- a/config.toml
+++ b/config.toml
@@ -57,5 +57,8 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_cache$", "\\.knit\\.md$", "\\.utf8\
     name = "Logs"
     url = "/logs/"
     weight = 7
-
+[[menu.primary]]
+    name = "OUT"
+    url = "/OUT/"
+    weight = 8
 
