--- a/config.toml
+++ b/config.toml
@@ -58,7 +58,11 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_cache$", "\\.knit\\.md$", "\\.utf8\
     url = "/logs/"
     weight = 7
 [[menu.primary]]
+    name = "Context"
+    url = "/context/"
+    weight = 8
+[[menu.primary]]
     name = "OUT"
     url = "/OUT/"
-    weight = 8
+    weight = 9
 
