scrub for archive

--- a/config.toml
+++ b/config.toml
@@ -16,7 +16,7 @@ pygmentscodefences = true
 ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_cache$", "\\.knit\\.md$", "\\.utf8\\.md$"]
 
 [params]
-  sitename = "Time Machine For Peace."
+  sitename = "time machine for peace"
   faviconfile = "images/UPC.png"
   highlightjs = true
   highlightjslanguages = ["r", "python", "stan"]
@@ -28,41 +28,4 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_cache$", "\\.knit\\.md$", "\\.utf8\
   [markup.goldmark]
     [markup.goldmark.renderer]
       unsafe = true
-
-[[menu.primary]]
-    name = "IN"
-    url = "/IN/"
-    weight = 1
-[[menu.primary]]
-    name = "Dedication"
-    url = "/dedication/"
-    weight = 2
-[[menu.primary]]
-    name = "About"
-    url = "/about/"
-    weight = 3
-[[menu.primary]]
-    name = "FAQ"
-    url = "/faq/"
-    weight = 4
-[[menu.primary]]
-    name = "Booth"
-    url = "/booth/"
-    weight = 5
-[[menu.primary]]
-    name = "Kickstarter"
-    url = "/kickstarter/"
-    weight = 6
-[[menu.primary]]
-    name = "Logs"
-    url = "/logs/"
-    weight = 7
-[[menu.primary]]
-    name = "Context"
-    url = "/context/"
-    weight = 8
-[[menu.primary]]
-    name = "OUT"
-    url = "/OUT/"
-    weight = 9
 
